# RESAD

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
attacker/: mitm_sim.py  recon.py  replay_attack.py  write_attack.py
defender/: ids.py
docs/: ARCHITECTURE.md  BLUE_TEAM_PLAYBOOK.md  RED_TEAM_PLAYBOOK.md
hmi/: app.py
hmi/static/js/: dashboard.js
hmi/templates/: index.html
simulation/: config.py  modbus_server.py  solar_model.py
tests/: test_integration.py  test_physics.py
